--- a/package.json
+++ b/package.json
@@ -2,23 +2,41 @@
   "name": "acme_shopping",
   "version": "1.0.0",
   "description": "If you have any notes or instructions about the exercise, please write them in this file.",
+  "main": "index.js",
+  "watch": true,
   "dependencies": {
-    "react": "~15.5.4",
-    "react-dom": "~15.5.4"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "reset-css": "^2.2.1"
   },
   "devDependencies": {
-    "babel-core": "~6.24.1",
-    "babel-loader": "~7.0.0",
-    "babel-preset-es2015": "~6.24.1",
-    "babel-preset-react": "~6.24.1",
-    "webpack": "~2.5.1",
-    "webpack-dev-server": "~2.4.5"
-  },
-  "config": {
-    "port": "8000"
+    "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "^0.11.2",
+    "lodash": "^4.17.5",
+    "node-sass": "^4.5.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.8.2",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.7",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Acme Company",
